# Kodein-DB

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  build.gradle.kts  example.gradle.properties  gradle.properties  kodein.local.properties  settings.gradle.kts
.github/conf/: gradle.linux  gradle.macOS-latest  gradle.ubuntu-latest  gradle.universal  gradle.windows-latest  kodein.local.macOS-latest.properties  kodein.local.macos-latest.properties  kodein.local.ubuntu-latest.properties  kodein.local.windows-latest.properties
.github/workflows/: release.yml  snapshot.yml  test.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/org/kodein/gradle/: androidNdkPlugin.kt
doc/: antora.yml  core.adoc
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/pages/: core.adoc  getting-started.adoc  index.adoc
doc/modules/core/: nav.adoc
doc/modules/core/pages/: advanced.adoc  consistency.adoc  defining-data-model.adoc  encryption.adoc  immutability.adoc  install.adoc  iteration.adoc  operations.adoc  reactive.adoc  setup-database.adoc  tests.adoc
gradle/: toolchains.gradle
gradle/wrapper/: gradle-wrapper.properties
kdb/kdb-api/kodein-db-api-common/: build.gradle.kts
kdb/kdb-api/kodein-db-api-jvm/: build.gradle.kts
kdb/kdb-api/kodein-db-api-native/: build.gradle.kts
kdb/kdb-impl/kodein-db-common/: build.gradle.kts
kdb/kdb-impl/kodein-db-jvm/: build.gradle.kts
kdb/kdb-impl/kodein-db-native/: build.gradle.kts
kdb/kodein-db/: build.gradle.kts
kdb/kodein-db-api/: build.gradle.kts
kdb/kodein-db-inmemory/: build.gradle.kts
kdb/kodein-db/src/androidMain/: AndroidManifest.xml
kdb/kodeindb/: build.gradle.kts
kdb/kodeindb-api/: build.gradle.kts
kdb/serializer/kodein-db-serializer-kotlinx/: build.gradle.kts
kdb/serializer/kodein-db-serializer-kotlinx/src/commonMain/kotlin/org.kodein.db.orm.kotlinx/: KotlinxSerializer.kt  Ref.kt
kdb/serializer/kodein-db-serializer-kryo-jvm/: build.gradle.kts
ldb/jni/: build.gradle.kts
ldb/jni/c/: CMakeLists.txt  build.gradle.kts
ldb/jni/c/src/main/cpp/: leveldb-jni.cc
ldb/jni/cmake/: CMakeLists.txt
ldb/jni/kodein-leveldb-jni-jvm/: build.gradle.kts
ldb/jni/kodein-leveldb-jni-jvm/kodein-leveldb-jni-jvm-linux/: build.gradle.kts
ldb/jni/kodein-leveldb-jni-jvm/kodein-leveldb-jni-jvm-macos/: build.gradle.kts
ldb/jni/kodein-leveldb-jni-jvm/kodein-leveldb-jni-jvm-windows/: build.gradle.kts
ldb/jni/src/main/cpp/: leveldb-jni.cc
ldb/k-ldb/k-ldb-tests-common/: build.gradle.kts
ldb/k-ldb/kodein-leveldb-android/: build.gradle.kts
ldb/k-ldb/kodein-leveldb-jvm/: build.gradle.kts
ldb/k-ldb/kodein-leveldb-native/: build.gradle.kts
ldb/kodein-leveldb/: build.gradle.kts
ldb/kodein-leveldb-api/: build.gradle.kts
ldb/kodein-leveldb-inmemory/: build.gradle.kts
ldb/kodein-leveldb-jni/: build.gradle.kts
ldb/kodein-leveldb-native/: build.gradle.kts
ldb/kodein-leveldb-native/src/allNativeMain/c_interop/: libleveldb.def
ldb/kodein-leveldb/src/allJvmMain/cpp/: leveldb-jni.cc
ldb/kodein-leveldb/src/androidMain/: AndroidManifest.xml
ldb/kodein-leveldb/src/androidMain/cpp/: CMakeLists.txt
ldb/kodein-leveldb/src/nativeInterop/cinterop/: libleveldb.def
ldb/ldb-api/kodein-leveldb-api-common/: build.gradle.kts
ldb/ldb-api/kodein-leveldb-api-jvm/: build.gradle.kts
ldb/ldb-api/kodein-leveldb-api-native/: build.gradle.kts
ldb/ldb-jni/kodein-leveldb-jni/: build.gradle.kts
ldb/ldb-jni/ldb-jni-lib/kodein-leveldb-jni-lib-android/: CMakeLists.txt  build.gradle.kts
ldb/ldb-jni/ldb-jni-lib/kodein-leveldb-jni-lib-android/src/main/: AndroidManifest.xml
ldb/ldb-jni/ldb-jni-lib/kodein-leveldb-jni-lib-jvm/: build.gradle.kts
ldb/ldb-jni/ldb-jni-lib/kodein-leveldb-jni-lib-jvm/src/main/cpp/: leveldb-jni.cc
ldb/ldb-lib/leveldb/: build.gradle.kts
ldb/ldb-lib/leveldb-native-interop/: build.gradle.kts
ldb/ldb-lib/leveldb-native-interop/src/main/c_interop/: libleveldb.def
ldb/ldb-lib/leveldb-native-interop/src/main/kotlin/leveldb/: Comparator.kt  LevelDB.kt  Options.kt
ldb/ldb-lib/src/leveldb/include/leveldb/: status.h
ldb/lib/: build.gradle.kts
ldb/lib/crc32c/: build.gradle.kts
ldb/lib/leveldb/: build.gradle.kts
ldb/lib/snappy/: build.gradle.kts
ldb/lib/src/leveldb-kodein/: CMakeLists.txt
leveldb/api/leveldb-api-common/: build.gradle.kts
leveldb/api/leveldb-api-jvm/: build.gradle.kts
leveldb/api/leveldb-api-native/: build.gradle.kts
leveldb/jni/leveldb-jni/: build.gradle.kts
leveldb/jni/leveldb-jni-android/: CMakeLists.txt  build.gradle.kts
leveldb/jni/leveldb-jni-native/: build.gradle.kts
leveldb/jni/leveldb-jni-native/src/main/cpp/: leveldb-jni.cc
leveldb/jni/leveldb-jni-native/src/main/public/kodein/: org_kodein_db_leveldb_jni_LevelDBNative.h  org_kodein_db_leveldb_jni_LevelDBNative_Companion.h  org_kodein_db_leveldb_jni_LevelDBNative_Factory.h  org_kodein_db_leveldb_jni_LevelDBNative_Iterator.h  org_kodein_db_leveldb_jni_LevelDBNative_Iterator_Companion.h  org_kodein_db_leveldb_jni_LevelDBNative_Iterator_NativeBytesArray.h  (+7 more)
leveldb/kodein-leveldb/kodein-leveldb-android/: build.gradle.kts
leveldb/kodein-leveldb/kodein-leveldb-android/src/main/: AndroidManifest.xml
leveldb/kodein-leveldb/kodein-leveldb-jvm/: build.gradle.kts
leveldb/kodein-leveldb/kodein-leveldb-native/: build.gradle.kts
leveldb/lib/leveldb-native/: build.gradle.kts
leveldb/lib/src/dlmalloc/: malloc.h
leveldb/lib/src/snappy/: config.h
leveldb/tests/common/: build.gradle.kts
leveldb/tests/jvm/: build.gradle.kts
plugin/kodein-db-plugin-fts/: build.gradle.kts
plugin/kodein-db-plugin-fts/src/commonMain/kotlin/org.kodein.db.plugin.fts/: FtsBatchUtil.kt  FtsCursor.kt  FtsModelBatch.kt  FtsModelDB.kt  FtsQuery.kt  FullTextSearch.kt  HasFullText.kt  Stemmer.kt  ftsKeys.kt  langs.kt  stopwords.kt  tokens.kt
plugins/kodein-db-encryption/: build.gradle.kts
test-utils/: build.gradle.kts
test-utils/src/androidMain/: AndroidManifest.xml
test/test-utils-common/: build.gradle.kts
test/test-utils-jvm/: build.gradle.kts
test/test-utils-native/: build.gradle.kts
(+560 files in other folders)
